--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
         </div>
 
-
+        <div>adx</div>
         <div>
             <div>
                 <h3>This Month's Promotions</h3>
